<resources>
    <string name="app_name">My Application</string>
    <string name="btn_get_started">Get Started</string>
    <string name="header_description">by creating a free account.</string>
    <string name="img_background_description">Background image</string>
    <string name="checkbox_agreement">By checking the box you agree to our</string>
    <string name="link_terms">Terms</string>
    <string name="text_and">and</string>
    <string name="link_conditions">Conditions.</string>
    <string name="btn_next">Next</string>
    <string name="label_new_member">New Member?</string>
    <string name="btn_register_now">Register now</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_prompt">Sign in to access your account</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Password</string>
    <string name="checkbox_remember_me">Remember me</string>
    <string name="link_forgot_password">Forgot password?</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_valid_email">Valid email</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_strong_password">Strong Password</string>
    <string name="prompt_have_account">Already have an account?</string>
    <string name="btn_login">Login</string>
    <string name="email_exists_error">Email allready exists</string>
    <string name="bad_password_error">Bad password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_main">Fragment main</string>
</resources>
